// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render one contact 1`] = `
<div
  className="ContactList"
>
  <ContactListItem
    contact={
      Object {
        "bio": "No comment!",
        "emails": Array [
          Object {
            "address": "maurizio.pucci@abc.com",
            "type": "lavoro",
          },
          Object {
            "address": "mao@xyz.io",
            "type": "privato",
          },
        ],
        "firstName": "Maurizio",
        "id": "100",
        "lastName": "Pucci",
        "phones": Array [
          Object {
            "number": "100 000 000",
            "type": "casa",
          },
        ],
      }
    }
    isNew={false}
    isReadOnly={false}
    key="100"
    prevContact={null}
  />
</div>
`;

exports[`should render the "no contacts" message 1`] = `
<div
  className="ContactList"
>
  <div
    className="ContactList__empty"
  >
    <h1>
      You still don't have any contact!
    </h1>
    <h2>
      You can fix it via the "Plus" button at the bottom-right :)
    </h2>
  </div>
</div>
`;

exports[`should render two contacts 1`] = `
<div
  className="ContactList"
>
  <ContactListItem
    contact={
      Object {
        "bio": "No comment!",
        "emails": Array [
          Object {
            "address": "maurizio.pucci@abc.com",
            "type": "lavoro",
          },
          Object {
            "address": "mao@xyz.io",
            "type": "privato",
          },
        ],
        "firstName": "Maurizio",
        "id": "100",
        "lastName": "Pucci",
        "phones": Array [
          Object {
            "number": "100 000 000",
            "type": "casa",
          },
        ],
      }
    }
    isNew={false}
    isReadOnly={false}
    key="100"
    prevContact={null}
  />
  <ContactListItem
    contact={
      Object {
        "bio": "Ciao!",
        "emails": Array [],
        "firstName": "Mario",
        "id": "300",
        "lastName": "Rossi",
        "phones": Array [],
      }
    }
    isNew={false}
    isReadOnly={false}
    key="300"
    prevContact={
      Object {
        "bio": "No comment!",
        "emails": Array [
          Object {
            "address": "maurizio.pucci@abc.com",
            "type": "lavoro",
          },
          Object {
            "address": "mao@xyz.io",
            "type": "privato",
          },
        ],
        "firstName": "Maurizio",
        "id": "100",
        "lastName": "Pucci",
        "phones": Array [
          Object {
            "number": "100 000 000",
            "type": "casa",
          },
        ],
      }
    }
  />
</div>
`;
